diseño parte 1 de home

--- a/my-app/src/pages/home.html
+++ b/my-app/src/pages/home.html
@@ -5,11 +5,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="../../public/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../../public/css/pages/home/style.css" rel="stylesheet">
     <title>Home</title>
 </head>
 
 <body>
     <div id="home"></div>
+    <img src="../../public/images/home/bg.png" id="bgimage" style="display: none;" />
+    <img src="../../public/images/home/box_center.png" id="boxcenter" style="display: none;" />
+    <img src="../../public/images/home/button_start.png" id="buttonstart" style="display: none;" />
     <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script> 
