--- a/my-app/src/pages/assignment.html
+++ b/my-app/src/pages/assignment.html
@@ -10,6 +10,8 @@
 </head>
 <body>
     <div id="assignment"></div>
+    <img src="../../public/images/assignment/bg.png" id="bgimage" style="display: none;" />
+    <img src="../../public/images/assignment/save.png" id="saveimage" style="display: none;" />
     <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script> 
