--- a/my-app/src/pages/assignment.html
+++ b/my-app/src/pages/assignment.html
@@ -11,6 +11,9 @@
 <body>
     <div id="assignment"></div>
     <img src="../../public/images/assignment/bg.png" id="bgimage" style="display: none;" />
+    <img src="../../public/images/assignment/logo.png" id="logo" style="display: none;" />
+    <img src="../../public/images/assignment/box_left.png" id="boxleft" style="display: none;" />
+    <img src="../../public/images/assignment/box_right.png" id="boxright" style="display: none;" />
     <img src="../../public/images/assignment/save.png" id="saveimage" style="display: none;" />
     <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
