diseño en juego

--- a/my-app/src/pages/game-deskt1.html
+++ b/my-app/src/pages/game-deskt1.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,13 +9,20 @@
     <link href="../../public/css/pages/game/style.css" rel="stylesheet">
     <title>Pantalla principal</title>
 </head>
+
 <body>
     <div id="game-deskt1"></div>
+    <img src="../../public/images/assignment/bg.png" id="bgimage" style="display: none;" />
+    <img src="../../public/images/assignment/logo.png" id="logo" style="display: none;" />
+    <img src="../../public/images/assignment/box_left.png" id="boxleft" style="display: none;" />
+    <img src="../../public/images/assignment/box_right.png" id="boxright" style="display: none;" />
+    <img src="../../public/images/assignment/save.png" id="saveimage" style="display: none;" />
     <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-    <script type="text/babel" src="../components/game/functions.js"></script> 
+    <script type="text/babel" src="../components/game/functions.js"></script>
     <script type="text/babel" src="../components/game/deskt1.js"></script>
-    
+
 </body>
+
 </html>
