--- a/my-app/src/pages/assignment.html
+++ b/my-app/src/pages/assignment.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="../../public/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../../public/css/font/fedora/fedora.css" rel="stylesheet">
+    <link href="../../public/css/font/machine/machine.css" rel="stylesheet">
     <link href="../../public/css/pages/assignment/style.css" rel="stylesheet">
     <title>Asignación</title>
 </head>
+
 <body>
     <div id="assignment"></div>
     <img src="../../public/images/assignment/bg.png" id="bgimage" style="display: none;" />
@@ -17,9 +21,10 @@
     <img src="../../public/images/assignment/save.png" id="saveimage" style="display: none;" />
     <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
-    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script> 
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     <script type="text/babel" src="../components/assignment/functions.js"></script>
     <script type="text/babel" src="../components/assignment/assignment.js"></script>
-    
+
 </body>
+
 </html>
