fix de comunicacion

--- a/my-app/src/pages/assignment.html
+++ b/my-app/src/pages/assignment.html
@@ -19,9 +19,9 @@
     <img src="../../public/images/assignment/box_left.png" id="boxleft" style="display: none;" />
     <img src="../../public/images/assignment/box_right.png" id="boxright" style="display: none;" />
     <img src="../../public/images/assignment/save.png" id="saveimage" style="display: none;" />
-    <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
-    <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
-    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+    <script src="../../public/js/react.development.js" crossorigin></script>
+    <script src="../../public/js/react-dom.development.js" crossorigin></script>
+    <script src="../../public/js/babel.min.js"></script>
     <script type="text/babel" src="../components/assignment/functions.js"></script>
     <script type="text/babel" src="../components/assignment/assignment.js"></script>
 
