--- a/my-app/src/pages/home.html
+++ b/my-app/src/pages/home.html
@@ -15,9 +15,9 @@
     <img src="../../public/images/home/bg.png" id="bgimage" style="display: none;" />
     <img src="../../public/images/home/box_center.png" id="boxcenter" style="display: none;" />
     <img src="../../public/images/home/button_start.png" id="buttonstart" style="display: none;" />
-    <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
-    <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
-    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script> 
+    <script src="../../public/js/react.development.js" crossorigin></script>
+    <script src="../../public/js/react-dom.development.js" crossorigin></script>
+    <script src="../../public/js/babel.min.js"></script>
     <script type="text/babel" src="../components/home/home.js"></script>
 </body>
 
