todo en una singlepage

--- a/my-app/src/pages/game-deskt1.html
+++ b/my-app/src/pages/game-deskt1.html
@@ -9,6 +9,7 @@
     <link href="../../public/css/font/fedora/fedora.css" rel="stylesheet">
     <link href="../../public/css/font/machine/machine.css" rel="stylesheet">
     <link href="../../public/css/pages/game/style.css" rel="stylesheet">
+    
     <title>Pantalla principal</title>
 </head>
 
@@ -22,6 +23,7 @@
     <script src="../../public/js/react.development.js" crossorigin></script>
     <script src="../../public/js/react-dom.development.js" crossorigin></script>
     <script src="../../public/js/babel.min.js"></script>
+    <script src="../../public/js/common.js"></script>
     <script type="text/babel" src="../components/game/functions.js"></script>
     <script type="text/babel" src="../components/game/deskt1.js"></script>
 
