--- a/my-app/src/pages/home.html
+++ b/my-app/src/pages/home.html
@@ -7,18 +7,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="../../public/css/bootstrap.min.css" rel="stylesheet">
     <link href="../../public/css/pages/home/style.css" rel="stylesheet">
-    <title>Home</title>
+    <link href="../../public/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../../public/css/font/fedora/fedora.css" rel="stylesheet">
+    <link href="../../public/css/font/machine/machine.css" rel="stylesheet">
+    <link href="../../public/css/pages/assignment/style.css" rel="stylesheet">
+    <link href="../../public/css/pages/game/style.css" rel="stylesheet">
+    <title>Battleship</title>
 </head>
 
 <body>
     <div id="home"></div>
+    <img src="../../public/images/assignment/bg.png" id="bgimage_2" style="display: none;" />
+    <img src="../../public/images/assignment/logo.png" id="logo" style="display: none;" />
+    <img src="../../public/images/assignment/box_left.png" id="boxleft" style="display: none;" />
+    <img src="../../public/images/assignment/box_right.png" id="boxright" style="display: none;" />
+    <img src="../../public/images/assignment/save.png" id="saveimage" style="display: none;" />
+
     <img src="../../public/images/home/bg.png" id="bgimage" style="display: none;" />
     <img src="../../public/images/home/box_center.png" id="boxcenter" style="display: none;" />
     <img src="../../public/images/home/button_start.png" id="buttonstart" style="display: none;" />
     <script src="../../public/js/react.development.js" crossorigin></script>
     <script src="../../public/js/react-dom.development.js" crossorigin></script>
     <script src="../../public/js/babel.min.js"></script>
+    <script src="../../public/js/common.js"></script>
+    <script type="text/babel" src="../components/assignment/functions.js"></script>
+    <script type="text/babel" src="../components/home/index.js"></script>
     <script type="text/babel" src="../components/home/home.js"></script>
+    <script type="text/babel" src="../components/game/deskt1.js"></script>
+    <script type="text/babel" src="../components/assignment/assignment.js"></script>
 </body>
 
 </html>
