se trabaja flujo completo de pantalla mostrador

--- a/my-app/src/pages/home.html
+++ b/my-app/src/pages/home.html
@@ -22,10 +22,12 @@
     <img src="../../public/images/assignment/box_left.png" id="boxleft" style="display: none;" />
     <img src="../../public/images/assignment/box_right.png" id="boxright" style="display: none;" />
     <img src="../../public/images/assignment/save.png" id="saveimage" style="display: none;" />
-
     <img src="../../public/images/home/bg.png" id="bgimage" style="display: none;" />
     <img src="../../public/images/home/box_center.png" id="boxcenter" style="display: none;" />
     <img src="../../public/images/home/button_start.png" id="buttonstart" style="display: none;" />
+    <img src="../../public/images/results/bg_barco_demo.jpg" id="bg_barco" style="display: none;" />
+    <img src="../../public/images/results/btn_startagain.png" id="btn_start_again" style="display: none;" />
+
     <script src="../../public/js/react.development.js" crossorigin></script>
     <script src="../../public/js/react-dom.development.js" crossorigin></script>
     <script src="../../public/js/babel.min.js"></script>
@@ -34,6 +36,7 @@
     <script type="text/babel" src="../components/home/index.js"></script>
     <script type="text/babel" src="../components/home/home.js"></script>
     <script type="text/babel" src="../components/game/deskt1.js"></script>
+    <script type="text/babel" src="../components/results/results.js"></script>
     <script type="text/babel" src="../components/assignment/assignment.js"></script>
 </body>
 
