diseño parte 1 de screen 1

--- a/my-app/src/pages/screen-azul.html
+++ b/my-app/src/pages/screen-azul.html
@@ -10,23 +10,30 @@
     <link href="../../public/css/font/machine/machine.css" rel="stylesheet">
     <link href="../../public/css/pages/game/style.css" rel="stylesheet">
 
-    <title>Pantalla 1</title>
+    <title>Pantalla equipo azul</title>
 </head>
 
 <body>
-    <div id="game-screen1"></div>
+    <div id="screen-blue"></div>
     <img src="../../public/images/assignment/bg.png" id="bgimage" style="display: none;" />
     <img src="../../public/images/assignment/logo.png" id="logo" style="display: none;" />
     <img src="../../public/images/assignment/box_left.png" id="boxleft" style="display: none;" />
     <img src="../../public/images/assignment/box_right.png" id="boxright" style="display: none;" />
-    <img src="../../public/images/assignment/save.png" id="saveimage" style="display: none;" />
-    
+    <img src="../../public/images/assignment/barras.gif" id="barras1" style="display: none;" />
+    <img src="../../public/images/assignment/barras2.gif" id="barras2" style="display: none;" />
+    <img src="../../public/images/assignment/barras3.gif" id="barras3" style="display: none;" />
+    <img src="../../public/images/assignment/circulos.gif" id="circles" style="display: none;" />
+    <img src="../../public/images/assignment/sonar.gif" id="circles2" style="display: none;" />
+
+    <img src="../../public/images/assignment/1.webm" id="video1" style="display: none;" />
+    <img src="../../public/images/assignment/2.webm" id="video2" style="display: none;" />
+
     <script src="../../public/js/react.development.js" crossorigin></script>
     <script src="../../public/js/react-dom.development.js" crossorigin></script>
     <script src="../../public/js/babel.min.js"></script>
     <script src="../../public/js/common.js"></script>
     <script type="text/babel" src="../components/game/functions.js"></script>
-    <script type="text/babel" src="../components/game/screen1.js"></script>
+    <script type="text/babel" src="../components/game/screen-blue.js"></script>
 
 </body>
 
