se agrega funcionalidad de puntos en patalla 1

--- a/my-app/src/pages/screen-azul.html
+++ b/my-app/src/pages/screen-azul.html
@@ -25,8 +25,8 @@
     <img src="../../public/images/assignment/circulos.gif" id="circles" style="display: none;" />
     <img src="../../public/images/assignment/sonar.gif" id="circles2" style="display: none;" />
 
-    <img src="../../public/images/assignment/1.webm" id="video1" style="display: none;" />
-    <img src="../../public/images/assignment/2.webm" id="video2" style="display: none;" />
+    <img src="../../public/images/assignment/video_static.mp4" id="video1" style="display: none;" />
+    <img src="../../public/images/assignment/video_shoot1.mp4" id="video2" style="display: none;" />
 
     <script src="../../public/js/react.development.js" crossorigin></script>
     <script src="../../public/js/react-dom.development.js" crossorigin></script>
