--- a/my-app/src/pages/screen-azul.html
+++ b/my-app/src/pages/screen-azul.html
@@ -25,8 +25,19 @@
     <img src="../../public/images/assignment/circulos.gif" id="circles" style="display: none;" />
     <img src="../../public/images/assignment/sonar.gif" id="circles2" style="display: none;" />
 
-    <img src="../../public/images/assignment/video_static.mp4" id="video1" style="display: none;" />
-    <img src="../../public/images/assignment/video_shoot1.mp4" id="video2" style="display: none;" />
+    <div src="../../public/images/assignment/videos/main.mp4" id="mainvideo" style="display: none;"></div>
+
+    <div src="../../public/images/assignment/videos/small/error.mp4" id="small_error" style="display: none;"></div>
+    <div src="../../public/images/assignment/videos/small/success1.mp4" id="small_success1" style="display: none;"></div>
+
+    <div src="../../public/images/assignment/videos/medium/error.mp4" id="medium_error" style="display: none;"></div>
+    <div src="../../public/images/assignment/videos/medium/success1.mp4" id="medium_success1" style="display: none;"></div>
+    <div src="../../public/images/assignment/videos/medium/success2.mp4" id="medium_success2" style="display: none;"></div>
+
+    <div src="../../public/images/assignment/videos/large/error.mp4" id="large_error" style="display: none;"></div>
+    <div src="../../public/images/assignment/videos/large/success1.mp4" id="large_success1" style="display: none;"></div>
+    <div src="../../public/images/assignment/videos/large/success2.mp4" id="large_success2" style="display: none;"></div>
+    <div src="../../public/images/assignment/videos/large/success3.mp4" id="large_success3" style="display: none;"></div>
 
     <script src="../../public/js/react.development.js" crossorigin></script>
     <script src="../../public/js/react-dom.development.js" crossorigin></script>
