--- a/my-app/src/pages/home.html
+++ b/my-app/src/pages/home.html
@@ -28,6 +28,14 @@
     <img src="../../public/images/results/bg_barco_demo.jpg" id="bg_barco" style="display: none;" />
     <img src="../../public/images/results/btn_startagain.png" id="btn_start_again" style="display: none;" />
 
+    <img src="../../public/images/menu/back.png" id="btn_back" style="display: none;" />
+    <img src="../../public/images/menu/bg_intructions.png" id="bginstructions" style="display: none;" />
+    <img src="../../public/images/menu/bg_menu.png" id="bgmenu" style="display: none;" />
+    <img src="../../public/images/menu/close.png" id="btn_close" style="display: none;" />
+    <img src="../../public/images/menu/close_menu.png" id="btn_closemenu" style="display: none;" />
+    <img src="../../public/images/menu/menu.png" id="menu" style="display: none;" />
+    <img src="../../public/images/menu/settings.png" id="btn_settings" style="display: none;" />
+
     <script src="../../public/js/react.development.js" crossorigin></script>
     <script src="../../public/js/react-dom.development.js" crossorigin></script>
     <script src="../../public/js/babel.min.js"></script>
@@ -38,6 +46,8 @@
     <script type="text/babel" src="../components/game/deskt1.js"></script>
     <script type="text/babel" src="../components/results/results.js"></script>
     <script type="text/babel" src="../components/assignment/assignment.js"></script>
+    <script type="text/babel" src="../components/menu/menu.js"></script>
+    <script type="text/babel" src="../components/menu/lateral-menu.js"></script>
 </body>
 
 </html>
