--- a/my-app/src/pages/home.html
+++ b/my-app/src/pages/home.html
@@ -25,6 +25,8 @@
     <img src="../../public/images/home/bg.png" id="bgimage" style="display: none;" />
     <img src="../../public/images/home/box_center.png" id="boxcenter" style="display: none;" />
     <img src="../../public/images/home/button_start.png" id="buttonstart" style="display: none;" />
+    <img src="../../public/images/home/popup_inst.png" id="pop_inst" style="display: none;" />
+
     <img src="../../public/images/results/bg_barco_demo.jpg" id="bg_barco" style="display: none;" />
     <img src="../../public/images/results/btn_startagain.png" id="btn_start_again" style="display: none;" />
 
@@ -48,6 +50,8 @@
     <script type="text/babel" src="../components/assignment/assignment.js"></script>
     <script type="text/babel" src="../components/menu/menu.js"></script>
     <script type="text/babel" src="../components/menu/lateral-menu.js"></script>
+    <script type="text/babel" src="../components/instructions/instructions.js"></script>
+    <script type="text/babel" src="../components/ramdom-team/ramdom-team.js"></script>
 </body>
 
 </html>
