turno aleatoreo vista

--- a/my-app/src/pages/home.html
+++ b/my-app/src/pages/home.html
@@ -17,6 +17,7 @@
 
 <body>
     <div id="home"></div>
+    <img src="../../public/images/bgop.png" id="bgimage_3" style="display: none;" />
     <img src="../../public/images/assignment/bg.png" id="bgimage_2" style="display: none;" />
     <img src="../../public/images/assignment/logo.png" id="logo" style="display: none;" />
     <img src="../../public/images/assignment/box_left.png" id="boxleft" style="display: none;" />
@@ -37,6 +38,12 @@
     <img src="../../public/images/menu/close_menu.png" id="btn_closemenu" style="display: none;" />
     <img src="../../public/images/menu/menu.png" id="menu" style="display: none;" />
     <img src="../../public/images/menu/settings.png" id="btn_settings" style="display: none;" />
+
+    <img src="../../public/images/instructions/bg_popup.png" id="bgpopup" style="display: none;" />
+    <img src="../../public/images/instructions/acorazado.png" id="acorazado" style="display: none;" />
+    <img src="../../public/images/instructions/fragata.png" id="fragata" style="display: none;" />
+    <img src="../../public/images/instructions/portaviones.png" id="portaviones" style="display: none;" />
+    <img src="../../public/images/instructions/coin.gif" id="coingif" style="display: none;" />
 
     <script src="../../public/js/react.development.js" crossorigin></script>
     <script src="../../public/js/react-dom.development.js" crossorigin></script>
