--- a/my-app/src/pages/screen-azul.html
+++ b/my-app/src/pages/screen-azul.html
@@ -39,6 +39,12 @@
     <div src="../../public/images/assignment/videos/large/success2.mp4" id="large_success2" style="display: none;"></div>
     <div src="../../public/images/assignment/videos/large/success3.mp4" id="large_success3" style="display: none;"></div>
 
+    <img src="../../public/images/instructions/bg_popup.png" id="bgpopup" style="display: none;" />
+    <img src="../../public/images/instructions/acorazado.png" id="acorazado" style="display: none;" />
+    <img src="../../public/images/instructions/fragata.png" id="fragata" style="display: none;" />
+    <img src="../../public/images/instructions/portaviones.png" id="portaviones" style="display: none;" />
+    <img src="../../public/images/instructions/coin.gif" id="coingif" style="display: none;" />
+
     <script src="../../public/js/react.development.js" crossorigin></script>
     <script src="../../public/js/react-dom.development.js" crossorigin></script>
     <script src="../../public/js/babel.min.js"></script>
