se le quita validacion de port y se agrega boton comenzar

--- a/my-app/src/pages/home.html
+++ b/my-app/src/pages/home.html
@@ -44,6 +44,7 @@
     <img src="../../public/images/instructions/fragata.png" id="fragata" style="display: none;" />
     <img src="../../public/images/instructions/portaviones.png" id="portaviones" style="display: none;" />
     <img src="../../public/images/instructions/coin.gif" id="coingif" style="display: none;" />
+    <img src="../../public/images/instructions/btnstar.png" id="btnstart" style="display: none;" />
 
     <script src="../../public/js/react.development.js" crossorigin></script>
     <script src="../../public/js/react-dom.development.js" crossorigin></script>
