marco home y cambios sencillos menu

--- a/my-app/src/pages/home.html
+++ b/my-app/src/pages/home.html
@@ -17,6 +17,7 @@
 
 <body>
     <div id="home"></div>
+    <img src="../../public/images/home/mark.png" id="mark_" style="display: none;" />
     <img src="../../public/images/bgop.png" id="bgimage_3" style="display: none;" />
     <img src="../../public/images/assignment/bg.png" id="bgimage_2" style="display: none;" />
     <img src="../../public/images/assignment/logo.png" id="logo" style="display: none;" />
