--- a/my-app/src/pages/home.html
+++ b/my-app/src/pages/home.html
@@ -45,6 +45,7 @@
     <img src="../../public/images/instructions/fragata.png" id="fragata" style="display: none;" />
     <img src="../../public/images/instructions/portaviones.png" id="portaviones" style="display: none;" />
     <img src="../../public/images/instructions/coin.gif" id="coingif" style="display: none;" />
+    <img src="../../public/images/instructions/coin.png" id="static_coin" style="display: none;" />
     <img src="../../public/images/instructions/btnstar.png" id="btnstart" style="display: none;" />
 
     <script src="../../public/js/react.development.js" crossorigin></script>
