--- a/my-app/src/pages/home.html
+++ b/my-app/src/pages/home.html
@@ -41,6 +41,7 @@
     <img src="../../public/images/menu/settings.png" id="btn_settings" style="display: none;" />
 
     <img src="../../public/images/instructions/bg_popup.png" id="bgpopup" style="display: none;" />
+    <img src="../../public/images/instructions/bginstructions.png" id="bginstructionspage" style="display: none;" />
     <img src="../../public/images/instructions/acorazado.png" id="acorazado" style="display: none;" />
     <img src="../../public/images/instructions/fragata.png" id="fragata" style="display: none;" />
     <img src="../../public/images/instructions/portaviones.png" id="portaviones" style="display: none;" />
