nuevo diseno asignar

--- a/my-app/src/pages/home.html
+++ b/my-app/src/pages/home.html
@@ -24,6 +24,7 @@
     <img src="../../public/images/assignment/box_left.png" id="boxleft" style="display: none;" />
     <img src="../../public/images/assignment/box_right.png" id="boxright" style="display: none;" />
     <img src="../../public/images/assignment/save.png" id="saveimage" style="display: none;" />
+    <img src="../../public/images/assignment/clean_btn.png" id="clean_btn" style="display: none;" />
     <img src="../../public/images/home/bg.png" id="bgimage" style="display: none;" />
     <img src="../../public/images/home/box_center.png" id="boxcenter" style="display: none;" />
     <img src="../../public/images/home/button_start.png" id="buttonstart" style="display: none;" />
