--- a/my-app/src/pages/home.html
+++ b/my-app/src/pages/home.html
@@ -51,6 +51,8 @@
     <img src="../../public/images/instructions/coin.png" id="static_coin" style="display: none;" />
     <img src="../../public/images/instructions/btnstar.png" id="btnstart" style="display: none;" />
 
+    <img src="../../public/images/music.mp3" id="audio" style="display: none;" />
+
     <script src="../../public/js/react.development.js" crossorigin></script>
     <script src="../../public/js/react-dom.development.js" crossorigin></script>
     <script src="../../public/js/babel.min.js"></script>
