--- a/my-app/src/pages/screen-rojo.html
+++ b/my-app/src/pages/screen-rojo.html
@@ -40,6 +40,7 @@
     <div src="../../public/images/assignment/videos/large/success3.mp4" id="large_success3" style="display: none;"></div>
 
     <img src="../../public/images/assignment/standbyimg.png" id="standbyimg" style="display: none;" />
+    <img src="../../public/images/assignment/gifbgfull.gif" id="gifbgfull" style="display: none;" />
     <img src="../../public/images/instructions/coin.png" id="static_coin" style="display: none;" />
 
     <img src="../../public/images/instructions/bg_popup.png" id="bgpopup" style="display: none;" />
